@@ -318,6 +318,8 @@ int gnuplot_test_command (const char *cmd);
 
 void gnuplot_png_set_use_aa (int s);
 
+void gnuplot_png_set_default_scale (double s);
+
 #ifndef WIN32
 int gnuplot_has_wxt (void);
 double gnuplot_get_version (void);
